<resources>
    <string name="app_name">BeHealthy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">What do you need?</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="call_ambulance">Call Ambulance</string>
    <string name="activity_tracker">Activity Tracker</string>
    <string name="diagnose_your_symptoms">Diagnose your symptoms</string>
    <string name="todo">TODO</string>
    <string name="more_settings">More settings</string>
    <string name="your_avatar">Your avatar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_email">Your email</string>

    <string name="api_key">AIzaSyC6-gwhsbRMAbtSNhR56y2EBV9S16bZhHE</string>

    <style name="Divider">
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">1dp</item>
        <item name="android:background">@color/md_blue_grey_800</item>
    </style>
</resources>