<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a_roundbg"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_func"
        android:layout_width="match_parent"
        android:layout_height="695dp"
        android:layout_marginTop="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/amv_bottom"
            android:layout_width="387dp"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="1.0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/go_fit" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/amv_top"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/mask" />

        <TextView
            android:id="@+id/txtQuesttion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/question"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amv_top" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="387dp"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amv_top">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/md_teal_100"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/main_btnDiagnose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/diagnose_your_symptoms"
                    android:padding="10dp"
                    android:src="@drawable/ic_stethoscope"
                    android:focusable="true" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/md_cyan_50"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/btnAmblance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/call_ambulance"
                    android:padding="10dp"
                    android:src="@drawable/ic_ambulance" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                app:cardBackgroundColor="@color/md_blue_100"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/btnReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:contentDescription="@string/set_reminders"
                    android:padding="10dp"
                    android:src="@drawable/ic_notepad" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="387dp"
            android:layout_height="90dp"
            android:layout_marginTop="48dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/md_pink_50"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/btnTracker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/activity_tracker"
                    android:padding="10dp"
                    android:src="@drawable/ic_calculator" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="15dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
